client/styles/modules/_media-thumbnail.scss
.media-thumbnail {
  text-decoration: none;
  color: white;
  font-size: .9em;
  background-color: #1d2733;
  display: inline-block;
  transition: .2s;
  float: left;
  width: 100%;

  // 2 cols
  @media screen and (min-width: 650px) {
    width: 48.5%;
    margin-right: 3%;
    margin-bottom: 3%;

    &:nth-child(2n+2) {
      margin-right: 0;
    }

  }

  // 3 Cols
  @media screen and (min-width: 1000px) {
    width: 31.333333333333332%;
    margin-right: 3%;
    margin-bottom: 3%;

    &:nth-child(2n+2) {
      margin-right: 3%;
    }

    &:nth-child(3n+3) {
      margin-right: 0;
    }

  }

  // 4 cols
  @media screen and (min-width: 1198px) {
    width: 22.75%;
    margin-right: 3%;
    margin-bottom: 3%;

    &:nth-child(3n+3) {
      margin-right: 3%;
    }

    &:nth-child(4n+4) {
      margin-right: 0;
    }

  }

  // 5 cols
  @media screen and (min-width: 1541px) {
    width: 17.6%;
    margin-right: 3%;
    margin-bottom: 3%;

    &:nth-child(4n+4) {
      margin-right: 3%;
    }

    &:nth-child(5n+5) {
      margin-right: 0;
    }

  }


  &:hover &__overlay {
    opacity: 0.8;
  }

  &:hover {
    transform: scale(1.03);
  }
}

.media-thumbnail__title {
  margin-top: 0;
  margin-bottom: .25em;
  white-space: nowrap;
  overflow: hidden;
}

.media-thumbnail__year {
  margin-bottom: .7em;
}

.media-thumbnail__info {
  padding: 1.5em;
}

.media-thumbnail__image-wrapper {
  position: relative;
  text-align: center;
}

.media-thumbnail__more-info {
  position: relative;
  top: 150px;
}

.media-thumbnail__image {
  width: 100%;
}


.media-thumbnail__rating {
  margin-bottom: 2em;
}

.media-thumbnail__star {
  color: $brand-color;
  font-size: 1.5em;
}

.media-thumbnail__overlay {
  position: absolute;
  transition: .3s;
  top: 0;
  bottom: 0;
  width: 100%;
  background-color: black;
  opacity: 0;
}

.media-thumbnail__link {
  display: inline-block;
  border-radius: 50%;
  padding: .9em;
  border: 2px solid white;
  margin-right: 5px;
  color: white;

  &:last-child {
    margin-right: 0;
  }
  &:hover {
    background-color: $brand-color;
    border-color: $brand-color;
    color: white;
  }
}

